--- a/sass/2-layouts/_navbar.sass
+++ b/sass/2-layouts/_navbar.sass
@@ -50,10 +50,27 @@ body.home #navegacao a#home, body.brasil #navegacao a#brasil, body.internacional
     margin-top: 60px
     background: variables.$bg-color-conteudo
 
-#primario, #secundario
-    width: 270px
+#tres-colunas
+    #primario, #secundario
+        width: 270px
+        float: left
+
+#duas-colunas
+    #primario
+        width: 555px
+        float: left
+
+#uma-coluna
+    #primario
+        width: 750px
+        float: left
+        margin: 0 0 20px 0
+
+#lateral
+    width: 180px
+    background: yellow
     float: left
-   
+    margin: 0 0 20px -750px
 
 #primario
     margin: 0 0 20px 195px
@@ -62,12 +79,6 @@ body.home #navegacao a#home, body.brasil #navegacao a#brasil, body.internacional
 #secundario
     margin: 0 0 20px 15px
     background: green
-
-#lateral
-    width: 180px
-    background: yellow
-    float: left
-    margin: 0 0 20px -750px
 
 /*Rodape*/        
 #container-rodape
