--- a/sass/1-base/_elements.sass
+++ b/sass/1-base/_elements.sass
@@ -17,6 +17,10 @@
         text-decoration: none
 
     button
-        cursor: pointer 
+        cursor: pointer
 
-
+    h2
+        font-size: 1em
+        background: variables.$bg-color-h2
+        color: variables.$color-white
+        padding: 5px
