--- a/sass/1-base/_variables.sass
+++ b/sass/1-base/_variables.sass
@@ -8,3 +8,6 @@ $bg-mark-page: #de003e
 $color-hover: #69001d
 $bg-color-rodape: #294c71
 $bg-color-conteudo: #f5f5f5    
+$bg-color-caixa: #f3f3f3
+$bg-color-h2: #294c71
+
