--- a/sass/2-layouts/_navbar.sass
+++ b/sass/2-layouts/_navbar.sass
@@ -68,7 +68,6 @@ body.home #navegacao a#home, body.brasil #navegacao a#brasil, body.internacional
 
 #lateral
     width: 180px
-    background: yellow
     float: left
     margin: 0 0 20px -750px
 
@@ -79,6 +78,18 @@ body.home #navegacao a#home, body.brasil #navegacao a#brasil, body.internacional
 #secundario
     margin: 0 0 20px 15px
     background: green
+
+/* Caixa */
+
+.caixa
+    margin: 10px 0
+    padding: 5px
+    background: variables.$bg-color-caixa url(../imagens/fundo-caixa.png)
+
+.caixa-conteudo
+    background: variables.$color-white
+    padding: 5px
+    margin-top: 5px
 
 /*Rodape*/        
 #container-rodape
