--- a/sass/2-layouts/_navbar.sass
+++ b/sass/2-layouts/_navbar.sass
@@ -26,11 +26,9 @@
             float: left
 
         a
-            font-size: 0.9em
-            display: block
+
             padding: 0.5em 1.5em
             line-height: 2.1em
-            text-decoration: none
             color: variables.$color-white
             background: url(../imagens/divisor.png) no-repeat left center
 
@@ -90,6 +88,25 @@ body.home #navegacao a#home, body.brasil #navegacao a#brasil, body.internacional
     background: variables.$color-white
     padding: 5px
     margin-top: 5px
+
+/* Formatar menus laterais */
+
+#lateral ul a
+
+    padding: 3px
+    line-height: 30px
+    color: black
+    border-bottom: 1px solid variables.$bg-color-caixa
+
+
+    &:hover
+        background: #f9f9f9 url(../imagens/marcador.png) no-repeat left center
+        padding-left: 20px
+        color: #a1a1a1
+                       
+                
+            
+
 
 /*Rodape*/        
 #container-rodape
