--- a/sass/1-base/_elements.sass
+++ b/sass/1-base/_elements.sass
@@ -26,3 +26,14 @@
         background: variables.$bg-color-h2
         color: variables.$color-white
         padding: 5px
+        
+label
+    display: block
+    cursor: pointer
+    padding-bottom: 5px
+
+input
+    padding: 5px
+    width: 148px
+    font-size: 0.9em
+    background-color: #fff
