--- a/sass/3-modules/_button.sass
+++ b/sass/3-modules/_button.sass
@@ -1,15 +1,19 @@
-.btn
-    padding: 10px 15px
-    background-color: orange
-    color: #FFF
+@use '../1-base/variables'
+
+.btn-submit
+    width: 120px
+
+    background-color: variables.$bg-mark-page
+    color: variables.$color-white
     border-radius: 10px
-    border: 1px solid orange
+    border: 2px solid variables.$bg-mark-page
     text-transform: uppercase
-    font-size: 14px
+    font-size: 0.7em
     transition: .5s
     display: block
-    margin: 15px auto
-    
+    margin: 10px auto
 
     &:hover
         background-color: transparent
+        color: variables.$bg-mark-page
+        cursor: pointer
