Finalizado a criação das colunas do lyout

--- a/sass/1-base/_elements.sass
+++ b/sass/1-base/_elements.sass
@@ -26,7 +26,22 @@
         background: variables.$bg-color-h2
         color: variables.$color-white
         padding: 5px
-        
+
+h3
+    text-transform: uppercase
+    display: block
+    font-size: 0.8em
+    padding: 3px
+
+.destaque h3
+    background: #b10333
+    color: variables.$color-white         
+
+.entrevista h3
+    background: #de003e
+    color: black 
+
+
 label
     display: block
     cursor: pointer
@@ -37,3 +52,7 @@ input
     width: 148px
     font-size: 0.9em
     background-color: #fff
+
+img.imagem-principal
+    width: 98%
+    border: 3px solid #dfdfdf
