--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,23 @@
   padding: 5px;
 }
 
+h3 {
+  text-transform: uppercase;
+  display: block;
+  font-size: 0.8em;
+  padding: 3px;
+}
+
+.destaque h3 {
+  background: #b10333;
+  color: #fff;
+}
+
+.entrevista h3 {
+  background: #de003e;
+  color: black;
+}
+
 label {
   display: block;
   cursor: pointer;
@@ -38,6 +55,11 @@ input {
   width: 148px;
   font-size: 0.9em;
   background-color: #fff;
+}
+
+img.imagem-principal {
+  width: 98%;
+  border: 3px solid #dfdfdf;
 }
 
 #container, #rodape {
@@ -115,12 +137,10 @@ body.home #navegacao a#home, body.brasil #navegacao a#brasil, body.internacional
 
 #primario {
   margin: 0 0 20px 195px;
-  background: blue;
 }
 
 #secundario {
   margin: 0 0 20px 15px;
-  background: green;
 }
 
 /* Caixa */
