Fianlizado a criação da terceira coluna e layouts de link

--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ h3 {
   padding: 3px;
 }
 
+/*Formatando destaque */
 .destaque h3 {
   background: #b10333;
   color: #fff;
@@ -41,6 +42,40 @@ h3 {
 
 .entrevista h3 {
   background: #de003e;
+  color: black;
+}
+
+/*Formatando lista de notícias */
+#lista-noticias li {
+  padding: 2px;
+  border-bottom: 1px solid #ccc;
+  height: 65px;
+}
+#lista-noticias li a {
+  font-size: 0.8em;
+}
+#lista-noticias li a h3 {
+  padding: 5px;
+  color: #3e7ab9;
+}
+#lista-noticias li a p {
+  font-size: 0.7em;
+}
+#lista-noticias li a img {
+  float: left;
+  margin: 5px;
+}
+#lista-noticias li:hover {
+  background: #eee;
+}
+
+.caixa-hover:hover {
+  background: #eee;
+}
+.caixa-hover a {
+  color: #294c71;
+}
+.caixa-hover a p {
   color: black;
 }
 
