--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ h3 {
 #lista-noticias li {
   padding: 2px;
   border-bottom: 1px solid #ccc;
-  height: 65px;
+  height: 62px;
 }
 #lista-noticias li a {
   font-size: 0.8em;
@@ -73,7 +73,7 @@ h3 {
   background: #eee;
 }
 .caixa-hover a {
-  color: #294c71;
+  color: #3e7ab9;
 }
 .caixa-hover a p {
   color: black;
