--- a/sass/1-base/_elements.sass
+++ b/sass/1-base/_elements.sass
@@ -47,7 +47,7 @@ h3
 #lista-noticias li
     padding: 2px
     border-bottom: 1px solid #ccc
-    height: 65px
+    height: 62px
 
     a
         font-size: 0.8em
@@ -72,7 +72,7 @@ h3
         background: #eee
 
     a
-        color: variables.$bg-color-h2
+        color: #3e7ab9
 
         p
             color: black
