--- a/sass/1-base/_elements.sass
+++ b/sass/1-base/_elements.sass
@@ -58,6 +58,7 @@ h3
 
         p
             font-size: 0.7em
+            color: black
 
     a img
         float: left
@@ -90,3 +91,9 @@ input
 img.imagem-principal
     width: 98%
     border: 3px solid #dfdfdf
+
+a
+    &:visited
+        color: #b10333
+        padding: 2px
+                
